--- a/package.json
+++ b/package.json
@@ -1,48 +1,60 @@
 {
   "name": "nano",
-  "private": true,
   "version": "0.0.1",
+  "private": true,
+  "description": "An Ionic project",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test.e2e": "cypress run",
-    "test.unit": "vitest",
-    "lint": "eslint"
+    "dev": "vite",
+    "lint": "eslint",
+    "preview": "vite preview"
   },
+  "prettier": "@vercel/style-guide/prettier",
   "dependencies": {
     "@capacitor/app": "5.0.6",
+    "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.5.0",
+    "@capacitor/filesystem": "^5.1.4",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
-    "@types/react-router": "^5.1.20",
-    "@types/react-router-dom": "^5.3.3",
+    "@nanostores/query": "^0.2.4",
+    "@nanostores/react": "^0.7.1",
+    "@supabase/supabase-js": "^2.38.3",
+    "@tanstack/react-virtual": "beta",
+    "firebase": "^10.5.2",
     "ionicons": "^7.0.0",
+    "million": "^2.6.4",
+    "motion": "^10.16.4",
+    "nanostores": "^0.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "reactfire": "^4.2.3",
+    "swiper": "^11.0.2"
   },
   "devDependencies": {
     "@capacitor/cli": "5.5.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
+    "@vercel/style-guide": "^5.0.1",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react": "^4.0.1",
-    "cypress": "^12.7.0",
+    "@vitejs/plugin-react-swc": "^3.4.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.35.0",
-    "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
-    "vitest": "^0.32.2"
-  },
-  "description": "An Ionic project"
+    "vite-plugin-pwa": "^0.16.5"
+  }
 }
